--- a/team.qmd
+++ b/team.qmd
@@ -162,6 +162,29 @@ Ruivaldo Freitas Viana graduated with a Bachelor of Arts degree in Economics and
 :::
 :::
 
+<div class="divider"></div>
+
+#### Helen Hastedt <br>
+
+::: columns
+::: {.columns}
+::: {.column #text}
+Helen is a MS student in Natural Resources and Environmental Management at the University of Hawaiʻi at Mānoa. Her research focuses on quantifying the environmental impacts of tourism on Oʻahu, particularly water use. Originally from northern Germany, she holds a BSc in Environmental Engineering and Management from Lübeck University of Applied Sciences. Her academic path has been shaped by hands-on research in water systems, early engagement in biodiversity and youth policy programs, active community engagement, and a strong interest in linking science and policy. Helen’s current work applies geospatial and consumption data to better understand tourism’s resource demands in island systems.
+
+<br><center>
+[{{< fa solid id-card size=LARGE >}}](https://helenhastedt.weebly.com/)
+&nbsp;&nbsp;&nbsp;&nbsp;
+[{{< fa brands linkedin size=LARGE >}}](http://linkedin.com/in/helenhastedt)
+</center>
+:::
+::: {.column #img-right}
+<center>
+<img src="/assets/images/2025_helen_hastedt_headshot.png" width="90%" class="team-img" />
+</center>
+:::
+:::
+:::
+
 ::: {.highlights}
 ### Master's of Environmental Management Students
 :::
@@ -170,40 +193,17 @@ Ruivaldo Freitas Viana graduated with a Bachelor of Arts degree in Economics and
 
 ::: columns
 ::: {.columns}
+::: {.column #img}
+<center>
+<img src="/assets/images/2024_zoe_sidana_bunnath_headshot.png" width="90%" class="team-img" />
+</center>
+:::
+
 ::: {.column #text}
 Zoe Sidana Bunnath graduated from the Royal University of Phnom Penh with a Bachelor of Development Studies in Natural Resource Management and Development and a Bachelor of English for Professional Communication. Zoe had worked as a Research Assistant at the Cambodia Development Resource Institute, involved in multiple projects on climate change, renewable energy, and natural resources governance at the Center for Natural Resources and Environment. Additionally, she has prior experience in the conservation field, having led a BirdLife International-Young Conservation Leader's project to support Sarus Crane conservation at Boeung Perk Lapouv and Anlung Pring Protected Landscapes. Passionate about lifelong learning and sustainable development, she envisions a world where environmental sustainability and economic development coexist harmoniously.
 
 <br><center>
 [{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/zoe-sidana-bunnath/?originalSubdomain=kh)
-</center>
-:::
-::: {.column #img-right}
-<center>
-<img src="/assets/images/2024_zoe_sidana_bunnath_headshot.png" width="90%" class="team-img" />
-</center>
-:::
-:::
-:::
-
-<div class="divider"></div>
-
-#### Helen Hastedt <br>
-
-::: columns
-::: {.columns}
-::: {.column #img}
-<center>
-<img src="/assets/images/2025_helen_hastedt_headshot.png" width="90%" class="team-img" />
-</center>
-:::
-
-::: {.column #text}
-Helen is a MS student in Natural Resources and Environmental Management at the University of Hawaiʻi at Mānoa. Her research focuses on quantifying the environmental impacts of tourism on Oʻahu, particularly water use. Originally from northern Germany, she holds a BSc in Environmental Engineering and Management from Lübeck University of Applied Sciences. Her academic path has been shaped by hands-on research in water systems, early engagement in biodiversity and youth policy programs, active community engagement, and a strong interest in linking science and policy. Helen’s current work applies geospatial and consumption data to better understand tourism’s resource demands in island systems.
-
-<br><center>
-[{{< fa solid id-card size=LARGE >}}](https://helenhastedt.weebly.com/)
-&nbsp;&nbsp;&nbsp;&nbsp;
-[{{< fa brands linkedin size=LARGE >}}](http://linkedin.com/in/helenhastedt)
 </center>
 :::
 :::
@@ -217,54 +217,32 @@ Helen is a MS student in Natural Resources and Environmental Management at the U
 ### Undergraduate Students
 :::
 
+#### Henry Bher <br>
+
+::: columns
+::: {.columns}
+::: {.column #text}
+*Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras vehicula, mi eget laoreet varius, libero justo cursus odio, nec dictum libero justo sit amet elit. Integer nec odio nec nisi cursus tincidunt.*
+
+<br><center>
+[{{< fa solid id-card size=LARGE >}}]()
+&nbsp;&nbsp;&nbsp;&nbsp;
+[{{< fa brands linkedin size=LARGE >}}]()
+&nbsp;&nbsp;&nbsp;&nbsp;
+[{{< fa brands github size=LARGE >}}]()
+</center>
+:::
+::: {.column #img-right}
+<center>
+<img src="/assets/placeholders/placeholder_image_circle.png" width="90%" class="team-img" />
+</center>
+:::
+:::
+:::
+
 ::: {.highlights}
 ### Research Assistants
 :::
-
-<!-- #### Sydney Campbell <br> -->
-
-<!-- ::: columns -->
-<!-- ::: {.columns} -->
-<!-- ::: {.column #img} -->
-<!-- <center> -->
-<!-- <img src="/assets/images/2024_sydney_campbell_headshot.jpg" width="90%" class="team-img" /> -->
-<!-- </center> -->
-<!-- ::: -->
-
-<!-- ::: {.column #text} -->
-<!-- *Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras vehicula, mi eget laoreet varius, libero justo cursus odio, nec dictum libero justo sit amet elit. Integer nec odio nec nisi cursus tincidunt. Sed ac felis ac nulla fermentum tincidunt. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.* -->
-
-<!-- <br><center> -->
-<!-- [{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/sydney-campbell-b4428419b/) -->
-<!-- </center> -->
-<!-- ::: -->
-<!-- ::: -->
-<!-- ::: -->
-
-<!-- <div class="divider"></div> -->
-
-<!-- #### Whitney Goodell <br> -->
-
-<!-- ::: columns -->
-<!-- ::: {.columns} -->
-<!-- ::: {.column #text} -->
-
-<!-- Whitney has an MS in fisheries ecology, is a National Geographic Explorer and works at Pristine Seas. She occasionally supports the lab in spatial data analysis. -->
-
-<!-- <br><center> -->
-<!-- [{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/whitney-goodell-26abb62a2/) -->
-<!-- &nbsp;&nbsp;&nbsp;&nbsp; -->
-<!-- [{{< ai researchgate size=LARGE >}}](https://www.researchgate.net/profile/Whitney-Goodell) -->
-<!-- </center> -->
-<!-- ::: -->
-<!-- ::: {.column #img-right} -->
-<!-- <center><img src="/assets/images/2024_whitney_goodell_headshot.jpeg" width="90%" class="team-img" /> -->
-<!-- </center> -->
-<!-- ::: -->
-<!-- ::: -->
-<!-- :::  -->
-
-<!-- <div class="divider"></div> -->
 
 #### Elanur Ural <br>
 
@@ -291,11 +269,6 @@ Ela is a PhD student out of the Department of Economics at University of Hawai'i
 
 ::: columns
 ::: {.columns}
-::: {.column #img}
-<center>
-<img src="/assets/images/2023_alemarie_ceria_headshot.png" width="90%" class="team-img" />
-</center>
-:::
 ::: {.column #text}
 Alemarie has a B.A. in Economics from the University of Hawaii at Manoa. With nearly three years of experience in the lab, she actively engages in data management, collection, and analysis across multiple projects. She also develops visualizations for reports, presentations, and papers, ensuring research reproducibility. Alemarie co-authored two publications: ["Detecting Religion from Space: Nyepi Day in Bali"](https://www.sciencedirect.com/science/article/abs/pii/S2352938521001440?via%3Dihub) in *Remote Sensing Applications: Society and Environment* (2021) and "[Exploring the influence of activity participation on the economic value of nature-based recreation in the Sierra Nevada](https://www.sciencedirect.com/science/article/pii/S0301479724010673?via%3Dihub)" in *Journal of Environmental Management* (2024).
 
@@ -309,6 +282,11 @@ Alemarie has a B.A. in Economics from the University of Hawaii at Manoa. With ne
 [{{< ai researchgate size=LARGE >}}](https://www.researchgate.net/profile/Alemarie-Ceria)
 </center>
 :::
+::: {.column #img-right}
+<center>
+<img src="/assets/images/2023_alemarie_ceria_headshot.png" width="90%" class="team-img" />
+</center>
+:::
 :::
 :::
 
@@ -320,24 +298,15 @@ Alemarie has a B.A. in Economics from the University of Hawaii at Manoa. With ne
 
 #### Leah Bremer (2012)
 
-Leah helped conduct a needs assessment related to ecosystem services quantification for the state.
-Leah is now an Associate Specialist at the University of Hawaiʻi Economic Research Organization.
+#### Carlo Fezzi (2019)
 
-#### Carlo Fezzi (2017-2019)
+#### Megan Barnes (2019)
 
-Carlo strengthened the non-market valuation capacity of the lab.
-Carlo is now a professor in Italy.
+#### Mia Comeros (2024)
 
-#### Megan Barnes (2017-2019)
+#### Anders Dugstad (2024)
 
-Megan brought her decision analysis expertise to the lab.
-She now works for the government of West Australia.
-
-#### Mia Comeros (2022-2024)
-
-#### Anders Dugstad (2023-2024)
-
-#### Lansing Perng (2018-2024)
+#### Lansing Perng (2025)
 
 ::: {.highlights}
 ### PhD Students
@@ -345,14 +314,11 @@ She now works for the government of West Australia.
 
 #### Hla Htun (2018)
 
-Hla integrated physical science models (watershed), social science models, and participatory system models to evaluate ecosystem services.
-Hla was hired by an engineering consulting firm in Honolulu.
-
 #### Jutha Supholdhavanij (2022)
 
-Jutha was a Royal Thai scholar who investigated conflict resolution in Thai marine protected areas.
+#### Alohi Nakachi (2024)
 
-#### Alohi Nakachi (2018-2024)
+#### Lansing Perng (2024)
 
 ::: {.highlights}
 ### Master's of Science Students
@@ -360,32 +326,15 @@ Jutha was a Royal Thai scholar who investigated conflict resolution in Thai mari
 
 #### Shanna Grafeld (2015)
 
-Shanna focused on economic analyses coupled with the Atlantis Ecosystem Model.
-She is now a corporate responsibility analyst for a private sector firm in Florida.
-
 #### Becky Ingram (2016)
-
-Becky's thesis used the Driver-Pressure-State-Impact framework as part of NOAA's West Hawai'i Integrated Ecosystem Assessment.
-She continues to work as an environmental social scientist with NOAA.
 
 #### Joey Lecky (2016)
 
-Joey's Masters thesis focused on producing maps of cumulative human impact on the marine environment of Hawai'i.
-Joey currently works as a geographic information systems (GIS) specialist for NOAA's Integrated Ecosystem Assessment.
-
 #### Mia Iwane (2019)
-
-Mia studied the socioeconomic dynamics of fisheries and fisheries management.
-She currently works with the human dimensions program with NOAA PIFSC.
 
 #### Anita Tsang (2021)
 
-Anita, co-advised by Kuʻulei Rodgers, examined the association of octocorals with land-based pollution.
-She now works at the Division of Aquatic Resources.
-
 #### Rachael Cleveland (2022)
-
-Rachael focused on applying principles from Structured Decision Making to community-scale fire management in Hawai'i.
 
 ::: {.highlights}
 ### Master's of Environmental Management Students
@@ -393,46 +342,31 @@ Rachael focused on applying principles from Structured Decision Making to commun
 
 #### Marcus Peng (2014)
 
-Marcus' capstone focused on the Genuine Progress Indicator for the state.
-Marcus continues to work on environmental economic issues in the state.
-
 #### Nanea Lindsey (2015)
-
-Nanea conducted a capstone with the Pacific Island Fish and Wildlife Office related to public education.
-She graduated into a job as a Biologist with the U.S.
-Fish and Wildlife Service.
 
 #### Casey Ching (2018)
 
-Casey's project identified, mapped, and modeled the cultural dimensions of stream flow within Heʻeia.
-Casey's career post-graduation has brought her to the state Division of Forestry and Wildlife, the Division of Aquatic Resources, and she is now the coastal training program coordinator at Heʻeia National Estuarine Research Reserve.
-
 #### Aviv Suan (2019)
-
-Aviv focused on gleaning insights from analyzing public comments from small boat fishers using conflict theory.
-He now works as a data analyst at the Hawaiʻi Institute of Marine Biology in the Madin lab.
 
 #### Katia Chikasuye (2019)
 
-Katia was a Hauʻoli Mau Loa fellow working with the Oleson lab and Nelson lab (Oceanography) on water quality and coral reef state.
-Kate went on to be a Grau Fellow with the University of Hawaiʻi Sea Grant College Program.
-
 #### Courtney Payne (2019)
 
-Courtney helped create programs for invasive algae removal and monitoring in Paiko Lagoon State Wildlife Sanctuary for Division of Forestry and Wildlife.
-She got a job post-graduation with Kahoʻolawe Island Restoration Council as a coastal specialist.
+#### Melissa Kunz (2021)
 
-#### Melissa Kunz
-
-#### Kayla Hodges (2023-2025)
+#### Kayla Hodges (2025)
 
 ::: {.highlights}
 ### Visiting Scholars/Interns
 :::
 
-#### Lysbeth Koster (2023-2024)
+#### Cecile LeViol (2016)
 
-Lysbeth's MSc thesis project focused on the biogoechemical dynamics that influence aquaculture productivity of Hawaiian fishpond, and how future management can incorporate the impact of climate change.
+#### Marine Barizien (2018)
+
+#### Anne-Charlotte Olivier (2019)
+
+#### Lysbeth Koster (2024)
 
 #### Marion Graftieaux (2024)
 
@@ -440,22 +374,7 @@ Lysbeth's MSc thesis project focused on the biogoechemical dynamics that influen
 ### Undergraduate Students
 :::
 
-#### Cecile LeViol (2016)
-
-Cecile visited from France for 6 months, working on modeling land-sea connections and the decision science of land management.
-
 #### Lukanicole Zavas (2017)
-
-Luka conducted independent research with the Oleson lab on the state's Genuine Progress Indicator, winning a university-wide award. After graduation, she got a job in restoration in Waimea Valley, Oʻahu, and continued as a graduate student in NREM in the wildlife ecology lab.
-
-#### Marine Barizien (2018)
-
-Marine visited from her university in France to work on the water accounts project.
-She is now working on heavy metals management in French Guyana as a staff member of the government of France.
-
-#### Anne-Charlotte Olivier (2019)
-
-Anne-Charlotte picked up from Marine's work, building water accounts for the islands of Oahu and Maui. Anne-Charlotte now works as a project coordinator with the Green Municipal Fund at The Federation of Canadian Municipalities.
 
 #### Kate Crowell (2024)
 
@@ -465,15 +384,6 @@ Anne-Charlotte picked up from Marine's work, building water accounts for the isl
 
 #### Michele Barnes (2015)
 
-Michele worked as an RA in the Oleson lab analyzing data from Madagascar's small scale fisheries.
-She earned her PhD in NREM studying social networks.
-Michele is now Senior Research Fellow at ARC Centre of Excellence for Coral Reef Studies, James Cook University.
-
 #### Kim Falinski (2016)
 
-Kim was an RA in the Oleson lab investigating how land-based erosion processes are connected to inputs of sediments and sediment-bound nutrients in the coastal environment.
-Kim started working at TNC in Honolulu after graduation.
-
-#### Derek Ford (2018-2019, 2021)
-
-Derek, a Geography graduate student, was the lab GIS guru.
+#### Derek Ford (2021)
