chore(team): update lab member's bio

--- a/team.qmd
+++ b/team.qmd
@@ -252,7 +252,7 @@ Zoe Sidana Bunnath graduated from the Royal University of Phnom Penh with a Bach
 <center><img src="/assets/images/2023_ela_ural_headshot.png" width="90%" class="team-img" /></center>
 :::
 ::: {.column #text}
-Ela is a PhD student out of the Department of Economics at University of Hawai'i at Mānoa. Her research primarily focuses on agriculture and natural resources, with particular interest in the role of social institutions. She works under the Oleson Lab's coastal ecosystem accounting team on the valuation of fisheries for the main Hawaiian islands.
+Ela is a PhD student of Economics at University of Hawai’i at Mānoa. Her research focuses primarily on fisheries, resources, and public economics. She works under the Oleson Lab’s coastal ecosystem accounting team on the valuation of fisheries for the main Hawaiian islands.
 
 <br><center>
 [{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/elanur-ural/) 
